5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1674_1101.log
== TEST (2019-04-28 10:10:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
val = float(input("Consumo em kWh: ")).upper()
ins = input("Tipo de instalação: ")
if(val == "R" or val == "I" or val == "C" and val > 0):
	if(val == "R")
		if(val <= 500):
			total = 0.44 * val
		else:
			total = 0.65 * val
		print("Entradas:", val,"e tipo R")
		print("Valor total: R$", total)
	elif(val == "C"):
		if(val <= 1000):
			total = 0.55 * val
		else:
			total = 0.60 * val
		print("Entradas:", val,"e tipo C")
		print("Valor total: R$", total)
	elif(val == "I"):
		if(val <= 5000):
			total = 0.55 * val
		else:
			total = 0.60 * val
		print("Entradas:", val,"e tipo I")
		print("Valor total: R$", total)
else: 
	print("Entradas:", val,"e tipo", ins,)
	print("Dados invalidos")
	
	
	

	

-- ERROR:
File "XXXX", line 7
    if(val == "R")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:12:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: ")).upper()
y = input("Tipo de ytalação: ")
if(x == "R" or x == "I" or x == "C" and x > 0):
	if(x == "R")
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x,"e tipo R")
		print("xor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo C")
		print("xor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("xor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados inxidos")
	
	
	

	

-- ERROR:
File "XXXX", line 7
    if(x == "R")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:12:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: ")).upper()
y = input("Tipo de ytalação: ")
if(x == "R" or x == "I" or x == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x,"e tipo R")
		print("xor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo C")
		print("xor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("xor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados inxidos")
	
	
	

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = float(input()).upper()
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:13:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalação: ").upper()
if(x == "R" or x == "I" or x == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x,"e tipo R")
		print("xor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo C")
		print("xor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("xor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados inxidos")
	
	
	

	

-- OUTPUT:
Entradas: -56.0 e tipo I
Dados inxidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:14:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalação: ")
y = y.upper()
if(x == "R" or x == "I" or x == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x,"e tipo R")
		print("xor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo C")
		print("xor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("xor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados inxidos")
	
	
	

	

-- OUTPUT:
Entradas: -56.0 e tipo I
Dados inxidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:15:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(x == "R" or x == "I" or x == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x,"e tipo R")
		print("xor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo C")
		print("xor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("xor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados inxidos")
	
	
	

	

-- OUTPUT:
Entradas: -56.0 e tipo I
Dados inxidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:17:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(x == "R" or x == "I" or x == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x, "kWh e tipo R")
		print("valor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo C")
		print("valor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- OUTPUT:
Entradas: -56.0 e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:17:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(x == "R" or x == "I" or x == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x, "kWh e tipo R")
		print("valor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"kWh e tipo C")
		print("valor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- OUTPUT:
Entradas: -56.0 e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:19:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(y == "R" or y == "I" or y == "C" and y > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x, "kWh e tipo R")
		print("valor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"kWh e tipo C")
		print("valor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- OUTPUT:
Entradas: -56.0 e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:19:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(y == "R" or y == "I" or y == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
		print("Entradas:", x, "kWh e tipo R")
		print("valor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"kWh e tipo C")
		print("valor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
		print("Entradas:", x,"e tipo I")
		print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- OUTPUT:
Entradas: -56.0 e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:20:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(y == "R" or y == "I" or y == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
	print("Entradas:", x, "kWh e tipo R")
	print("valor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
	print("Entradas:", x,"kWh e tipo C")
	print("valor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
	print("Entradas:", x,"e tipo I")
	print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- ERROR:
File "XXXX", line 15
    elif(x == "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:20:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(y == "R" or y == "I" or y == "C" and x > 0):
	if(x == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
	print("Entradas:", x, "kWh e tipo R")
	print("valor z: R$", z)
	elif(x == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
	print("Entradas:", x,"kWh e tipo C")
	print("valor z: R$", z)
	elif(x == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
	print("Entradas:", x,"e tipo I")
	print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- ERROR:
File "XXXX", line 15
    elif(x == "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:21:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(y == "R" or y == "I" or y == "C" and x > 0):
	if(y == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
	print("Entradas:", x, "kWh e tipo R")
	print("valor z: R$", z)
	elif(y == "C"):
		if(x <= 1000):
			z = 0.55 * x
		else:
			z = 0.60 * x
	print("Entradas:", x,"kWh e tipo C")
	print("valor z: R$", z)
	elif(y == "I"):
		if(x <= 5000):
			z = 0.55 * x
		else:
			z = 0.60 * x
	print("Entradas:", x,"e tipo I")
	print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- ERROR:
File "XXXX", line 15
    elif(y == "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:22:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(y == "R" or y == "I" or y == "C" and x > 0):
	if(y == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
	print("Entradas:", x, "kWh e tipo R")
	print("valor z: R$", z)
		elif(y == "C"):
			if(x <= 1000):
				z = 0.55 * x
			else:
				z = 0.60 * x
	print("Entradas:", x,"kWh e tipo C")
	print("valor z: R$", z)
		elif(y == "I"):
			if(x <= 5000):
				z = 0.55 * x
			else:
				z = 0.60 * x
	print("Entradas:", x,"e tipo I")
	print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- ERROR:
File "XXXX", line 15
    elif(y == "C"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:23:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
if(y == "R" or y == "I" or y == "C" and x > 0):
	if(y == "R"):
		if(x <= 500):
			z = 0.44 * x
		else:
			z = 0.65 * x
	print("Entradas:", x, "kWh e tipo R")
	print("valor z: R$", z)
		elif(y == "C"):
			if(x <= 1000):
				z = 0.55 * x
			else:
				z = 0.60 * x
	print("Entradas:", x,"kWh e tipo C")
	print("valor z: R$", z)
		elif(y == "I"):
			if(x <= 5000):
				z = 0.55 * x
			else:
				z = 0.60 * x
	print("Entradas:", x,"e tipo I")
	print("valor z: R$", z)
else: 
	print("Entradas:", x,"e tipo", y,)
	print("Dados invalidos")
	
	
	

	

-- ERROR:
File "XXXX", line 15
    elif(y == "C"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:50:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" or y != "I" or y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
elif(y == "I" and x <= 5000):
	a = x * 0.55
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:51:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" or y != "I" or y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
elif(y == "I" and x <= 5000):
	a = x * 0.55
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:52:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
elif(y == "I" and x <= 5000):
	a = x * 0.55
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:53:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	round(a,2)
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:54:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:54:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:55:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.141626
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:55:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas: ", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:55:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:56:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.147606
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:56:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" and x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:57:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" or x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:57:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" or x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.169836
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:57:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" or x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.182185
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:57:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" or x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.217515
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:57:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" or x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.0972111
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:57:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" or x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.130884
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:57:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo em kWh: "))
y = input("Tipo de instalacao: ")
y = y.upper()
print("Entradas:", x ,"kWh e tipo", y,)
if(y != "R" and y != "I" and y != "C" or x < 0):
	print("Dados invalidos")
elif(y == "R" and x <= 500):
	a = x * 0.44
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "R" and x > 500):
	a = x * 0.65
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x <= 1000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "C" and x > 1000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x <= 5000):
	a = x * 0.55
	a = round(a,2)
	print("Valor total: R$", a)
elif(y == "I" and x > 5000):
	a = x * 0.60
	a = round(a,2)
	print("Valor total: R$", a)

	
	
	
-- EXECUTION TIME:
0.239566
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
